[tool.poetry]
name = "disaster-tweets"
version = "0.1.0"
description = ""
authors = ["sanjin-lebesgue <sanjin@lebesgue.io>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.3"
pandas = "^1.5.0"
scipy = "^1.9.1"
seaborn = "^0.12.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
